--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@hookform/resolvers": "^3.3.4",
     "@preline/overlay": "^1.4.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.4",
@@ -21,8 +22,9 @@
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
-    "tailwindcss": "^3.3.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
